syntax = "proto3";

package guru.qa.grpc.rococo;

option java_multiple_files = true;
option java_package = "guru.qa.rococo.grpc";
option java_outer_classname = "RococoUserProto";

// Сервис для работы с пользователем
service RococoUserdataService {
  rpc GetCurrentUser (GetCurrentUserRequest) returns (UserdataGrpc);
  rpc UpdateUser (UserdataGrpc) returns (UserdataGrpc);
}

message UserdataGrpc {
  string id = 1; // UUID юзера
  string username = 2; // Логин юзера
  string firstname = 3; // Имя пользователя
  string lastname = 4; // Фамилия пользователя
  bytes avatar = 5; // Аватар пользователя
}

message GetCurrentUserRequest {
  string username = 1; // Логин юзера
}